@@ -20,3 +20,4 @@ Cambios en la versión
 0.3 (Mar. 2010)
 ---------------
 - Espesor total del cerramiento calculado en informe y lista de capas
+- Difusividad y espesor de aire equivalente en capas
